# jornada-de-dados-23-24

./: .gititnore  README.md  pyproject.toml
site/: index.html
