[tool.poetry]
name = "jornada-de-dados-23-24"
version = "0.1.0"
description = ""
authors = ["Danilo Gallo <dcgallo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^0.9.2"
mkdocs = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
